@@ -237,6 +237,12 @@ directories you must identify them with
 \code{os.path.isdir(\var{file})}, and invoke \function{walk()} as
 necessary.
 \end{notice}
+
+\begin{seealso}
+  \seemodule{os}{The newer \function{os.walk()} generator supplies similar
+                 functionality and can be easier to use.
+\end{seealso}
+
 \end{funcdesc}
 
 \begin{datadesc}{supports_unicode_filenames}
